
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015-09-14.22_47_19.38.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/T.ZGame.cs
	modified:   ZGame/game_tutorials/Direct3D/3DS Model Loader/model.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/17.17_57_59.48.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/22.18_04_48.26.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
	modified:   ZGame/game_tutorials/Direct3D/3DS Model Loader/ModelLoader.vcxproj

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.09/24/2015.22_38_41.67.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.
Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/09/28.18_10_50.07.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
	new file:   "ZGame/game_tutorials/OpenGL/3DS Animation/\346\201\220\351\276\231\345\212\250\347\224\273.3DS"
