@@ -1,0 +1,81 @@
+﻿/* #FH  //z 2015-09-27 15:04:28 L.95 '32132 BG57IV3@BYH T355561276 .K.F292266832 ----+----+----+
++  0.FileInfo: +----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+        File : E:\MyDoc\GitHub\ZNginx\Doc\Npp\Npp.ChangeLog.cs.F292266832 -+----+----+----+----+
+       Motto : No one can make you feel inferior without your consent.+----+----+----+----+----+
+       Motto : The death of fear is in doing what you fear to do.+----+----+----+----+----+----+
+       Motto : It's hard to beat a person who never gives up.----+----+----+----+----+----+----+
+       Motto : Take what you do seriously. Not yourself.----+----+----+----+----+----+----+----+
+       Motto : Life begins where your comfort zone ends.----+----+----+----+----+----+----+----+
+       Motto : To know and not do, is not yet to know.-+----+----+----+----+----+----+----+----+
+       Motto : The more you do , the more you can do.--+----+----+----+----+----+----+----+----+
+       Motto : Do what you do best, better.--+----+----+----+----+----+----+----+----+----+----+
+       Motto : Get Your Hands Dirty.----+----+----+----+----+----+----+----+----+----+----+----+
+      Author : 126.org@gmail.com (R) Kaizen (->30,T5,M&M,W)-+----+----+----+----+----+----+----+
+
++  1.ID & Desc: ----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  2.Req & Repro: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  3.Folder & File: +----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  4.Cause & Solution: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  5.Todo & Done: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  6.Commit: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  7.Issue: ---+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  8.Summary: -+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  9.Misc: ----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
+***********************************************************************************************/
+
+#region 09-27 15:04 R#.0    @Ver.Info
+       Zey_S : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+		R#
+       Zey_E : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+       Zcl_S : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+       Zcl_E : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     Zndex_S : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     Zndex_E : //z 2015-09-27 15:05:27 L.95 '32073 T355597212 .K ~6   +----+----+----+----+----+
+     TimeCnt : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-09-27 15:04:44 L.95 '32116 T355561338 .K ~1   +----+----+----+----+----+
+     #1   R+ : //z 2015-09-27 15:04:44 L.95 '32116 T355561338 .K ~1     V+.2    L+.61   
+     File.Op : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     Version : //z 2015-09-27 15:05:27 L.95 '32073 T355597212 .K ~7     R+.1    L+.61   --+----+
+     #0   R+ : //z 2015-09-27 15:04:44 L.95 '32116 T355561338 .K ~2     R+.1    L+.62   V+.2    
+     K   Ter : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     K  Mers : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     K Kersi : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     KVersio : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     K Versi : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     K  Vers : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     K   Ver : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     K    Ve : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     K     V : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+     KaizenZ : //z 2015-09-27 15:04:28 L.95 '32132 T355561276 .K ~0   +----+----+----+----+----+
+#endregion //z 2015-09-27 15:04:28 L.95 '32132 BG57IV3@BYH T355561276 .K.F292266832 -+----+----+
+
+#region 09-27 15:04 R#.1    @Notepad++ v6.8.3 bug-fixes
+01. 
+//z 2015-09-27 15:04:14 L.95 '32146 BG57IV3@BYH T355561239 .K.F292266832 
+Notepad++ v6.8.3 bug-fixes:
+
+1.  Fix a crash issue by using wild card (*) to open files on command line.
+2.  Fix the problem of display refresh missing on exit.
+3.  Fix plugin shortcut configuration lost problem by using option -noPlugin.
+4.  Fix Norwegian localization bad display and wrong encoding.
+5.  Fix functionList display problem under high DPI.
+6.  Fix Norwegian localization bad display and wrong encoding.
+
+
+Included plugins:
+
+1.  NppFTP 0.26.3
+2.  NppExport v0.2.8
+3.  Plugin Manager 1.3.5
+4.  Converter 3.0
+5.  Mime Tool 1.9
+#endregion //z 2015-09-27 15:04:44 L.95 '32116 BG57IV3@BYH T355561338 .K.F292266832 -+----+----+
